service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: mastodon
  labels:
    app: mastodon
spec:
  type: ClusterIP
  selector:
    app: mastodon
  ports:
    - name: web
      protocol: TCP
      port: 3000
      targetPort: web
    - name: streaming
      protocol: TCP
      port: 4000
      targetPort: streaming
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: redis
