ingress.yaml
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mastodon-ingress
  labels:
    app: mastodon
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    kubernetes.io/tls-acme: 'true'
    certmanager.k8s.io/acme-challenge-type: 'dns01'
    certmanager.k8s.io/acme-dns01-provider: 'prod-dns'
spec:
  rules:
    - host: example.org
      http:
        paths:
          - backend:
              serviceName: mastodon
              servicePort: web
            path: /
          - backend:
              serviceName: mastodon
              servicePort: streaming
            path: /api/v1/streaming
  tls:
    - hosts:
      - example.org
      secretName: mastodon-tls
